# projets

adapter/: adapt_legacy_rectangle.cc
builder/: builder.cc
constexpr_factorial/: a.out  constexpr_factorial.hh  main.cc
huffman/: huffman.cc  node.cc  priority_queue.cc
libzork/: CMakeLists.txt
libzork/libzork/: CMakeLists.txt
libzork/libzork/src/runner/: choice.cc  choice_impl.cc  choice_impl.hh  interactive.cc  smart.cc  smart_impl.cc  smart_impl.hh
libzork/libzork/src/store/: store_impl.cc  store_impl.hh
libzork/libzork/src/story/: choice.cc  choice.hh  node.cc  node_impl.cc  node_impl.hh  story.cc  story_impl.cc  story_impl.hh
libzork/libzork/src/vars/: action.cc  action_impl.cc  action_impl.hh  condition.cc  condition_impl.cc  condition_impl.hh
vector_implements/: implements.hh  vector.hh
